# opencl-cpp

./: CMakeLists.txt  DeviceBuffer.hpp  DeviceClass.hpp  DeviceCommon.hpp  DeviceError.hpp  DeviceHandler.hpp  DeviceProgram.hpp  OpenCLInfo.hpp  error.h  lib.cpp  min_max_reduction.cpp  oclParser.hpp  test.cpp
cl_scripts/: HelloWorld_Kernel.cl  min_max_reduction.cl
